# structdump

./: .gitignore  README.md  StructDump.md  StructDump.py  dwarf_tag.py  main.py  pyproject.toml  struct_dump.py  test.py
src/structdump/: __init__.py  __main__.py  dwarf.py  dwarf_tag.py  structdump.py
